# payment_classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
app/: main.py
app/api/: classification.py  router.py
app/api/routes/: classification.py
app/clients/: base_client.py  gemini_client.py  llm_client.py  ollama_client.py  openai_client.py
app/core/: config.py  event_handlers.py  exceptions.py  logging.py  protocols.py
app/models/: classification.py
app/schemas/: classification.py
app/services/: classification_service.py  search_service.py
app/utils/: config.py  logging.py  prompt_loader.py
config/: base.yaml  categories.yaml  prompts.yaml
logs/: .gitkeep
tests/: conftest.py  test_api.py  test_clients.py  test_config.py  test_core.py  test_integration.py  test_integration_simple.py  test_main.py  test_models.py  test_search_service.py  test_services.py  test_utils.py
