[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-classifier"
version = "0.1.0"
dependencies = [
    "openai==1.93.0",
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "pyyaml==6.0.2",
    "uvicorn[standard]==0.35.0",
    "lmstudio==1.4.0",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "jupyter==1.1.1",
    "python-dotenv==1.1.1",
    "aiohttp==3.12.15",
    "google-generativeai",
    "tenacity",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*", "config*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-cov",
    "requests",
    "isort",
    "types-PyYAML",
    "types-requests",
    "mypy",
    "black[jupyter]",
]

[tool.pytest.ini_options]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true